# serialize-tracing

./: Cargo.toml  README.md  build.rs
benches/: serialization.rs
fbs/: tracing.fbs
proto/: tracing.proto
src/: gen_span.rs  lib.rs
